Reordering features on side navbar and fixing cropped titles

--- a/stylesheets/jbt-styles.scss
+++ b/stylesheets/jbt-styles.scss
@@ -721,6 +721,12 @@ span.label {
         margin-bottom: 2em;
         content: ""; // mandatory content, even empty
       }
+      
+      h2 {
+        margin-top: -60px;
+        padding-top: 60px;
+      }
+      
     }
   
     .sect2 {
